sources/scss/_output.scss
@keyframes caretBlink {
    0% {opacity: 1;}
    49% {opacity: 1;}
    50% {opacity: 0;}
    100% {opacity: 0;}
}

.output {
    width: calc(100% - #{4 * $spaceS + 2px});
    height: calc(100% - #{4 * $spaceS});
    resize: none;
    padding: 0 $spaceS;
    overflow-x: hidden;
    font-size: $editorBaseFontSize;
    line-height: $editorBaseFontSize * 1.25;

    &, &:focus {
        border-left: 0;
        border-right-width: $spaceS;
        border-right-style: solid;
        border-top: 0;
        border-bottom: 0;
        outline: 0;
    }
}

#output-touch {
    white-space: pre;
    text-align: left;
    letter-spacing: 1px;

    span.caret:after {
        display: inline-block;
        width: 1px;
        margin-right: -1px;
        animation-name: caretBlink;
        animation-duration: 1.25s;
        animation-iteration-count: infinite;
        content: " ";
    }
}

